ipc/ipdl/test/ipdl/error/managedNoCtor.ipdl
include protocol managerNoCtor;

protocol managedNoCtor {
    manager managerNoCtor;
    // empty
child: __delete__();
};
